--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Work+Sans:300,600);
 
-body{
+body {
     font-size: 20px;
     font-family: 'Work Sans', sans-serif;
     color: #333;
@@ -8,8 +8,16 @@ body{
   text-align: center;
   background-color: #f8f6f0;
 }
+h1 {
+  font-weight: 400;
+  margin: 0px;
+  padding: 10px;
+  font-size: 30px;
+  background-color: #444;
+  color: #fff;
+}
 
-h1{
+h2 {
   font-weight: 300;
   margin: 0px;
   padding: 10px;
@@ -18,7 +26,7 @@ h1{
   color: #fff;
 }
 
-.question{
+.question {
   font-size: 30px;
   margin-bottom: 10px;
 }
@@ -29,12 +37,12 @@ h1{
   display: inline-block;
 }
 
-.answers label{
+.answers label {
   display: block;
   margin-bottom: 10px;
 }
 
-button{
+button {
   font-family: 'Work Sans', sans-serif;
     font-size: 22px;
     background-color: #279;
@@ -46,11 +54,11 @@ button{
     margin-bottom: 20px;
 }
 
-button:hover{
+button:hover {
     background-color: #38a;
 }
 
-.slide{
+.slide {
   position: absolute;
   left: 0px;
   top: 0px;
@@ -59,12 +67,40 @@ button:hover{
   opacity: 0;
   transition: opacity 0.5s;
 }
-.active-slide{
+
+.active-slide {
   opacity: 1;
   z-index: 2;
 }
-.quiz-container{
+
+.quiz-container {
   position: relative;
   height: 200px;
   margin-top: 40px;
+}
+
+.presentation-container {
+  position: relative;
+  height: 300px;
+  margin-top: 40px;
+}
+
+.presentation {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  z-index: 1;
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+
+.active-presentation{
+  opacity: 1;
+  z-index: 2;
+}
+
+.title {
+  font-size: 30px;
+  margin-bottom: 10px;
 }
